# kinematics_animation

./: CMakeLists.txt  README.md  package.xml
demos/baxter/: baxter_rviz_config.rviz
launch/: baxter.launch
scripts/: player.py
